# OpenAssetIO-gRPC

./: .clang-tidy  .editorconfig  CMakeLists.txt  DIAGRAM.txt  README.md  Session.vim  conanfile.txt  openassetio_conf.toml  test_library.json  traits.yaml
cmake/: Common.cmake  CompilerWarnings.cmake  Config.cmake.in  DefaultTargetProperties.cmake
src/: CMakeLists.txt  openassetio.proto
src/openassetio-grpc/: CMakeLists.txt
src/openassetio-grpc/include/openassetio-grpc/: GRPCManagerImplementationFactory.hpp  GRPCManagerInterface.hpp
src/openassetio-grpc/src/: GRPCManagerImplementationFactory.cpp  GRPCManagerInterface.cpp
src/perf/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/server-python/: pyproject.toml
src/server-python/python/openassetio_grpc_server/: Server.py  __main__.py  openassetio_pb2.py  openassetio_pb2.pyi  openassetio_pb2_grpc.py
src/server-python/python/openassetio_grpc_server_python/: Server.py  __init__.py  __main__.py  utils.py
src/shared/: utils.cpp  utils.hpp
src/test/: CMakeLists.txt  main.cpp
